added components checkbox, select; finished left column for edit-course component

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -115,37 +115,80 @@
             <div class="edit-area-alert">Changes saved</div>
           </div>
           <div class="edit-course">
+
             <div class="edit-course__col edit-course__col--1">
+
               <div class="edit-course__row">
-                <label for=""></label>
+                <label for="">Title</label>
                 <input type="text">
               </div>
+
               <div class="edit-course__row">
-                <label for=""></label>
+                <label for="">Description</label>
                 <textarea name="" id="" rows="5"></textarea>
               </div>
+
               <div class="edit-course__row">
-                <label for=""></label>
+                <div class="edit-course__group edit-course__group--1">
+                  <div class="edit-course__label">Course for</div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch1" checked="">
+                    <label for="ch1" class="checkbox__label">ATC</label>
+                  </div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch2" checked="">
+                    <label for="ch2" class="checkbox__label">AIM</label>
+                  </div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch3">
+                    <label for="ch3" class="checkbox__label">ATSEP</label>
+                  </div>
+                </div>
+                <div class="edit-course__group edit-course__group--1 center-text">
+                  <div class="edit-course__label">obligatory</div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch4">
+                    <label for="ch4" class="checkbox__label checkbox__label--single"></label>
+                  </div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch5">
+                    <label for="ch5" class="checkbox__label checkbox__label--single"></label>
+                  </div>
+                  <div class="checkbox checkbox--white-bg">
+                    <input type="checkbox" id="ch6">
+                    <label for="ch5" class="checkbox__label checkbox__label--single"></label>
+                  </div>
+                </div>
+                <div class="edit-course__group edit-course__group--2">
+                  <div class="edit-course__label">repeat every</div>
+                  <select name="" id="" clas>
+                    <option value="">earl</option>
+                    <option value="">month</option>
+                    <option value="">2 years</option>
+                  </select>
+                  <select name="" id="">
+                    <option value="">earl</option>
+                    <option value="">month</option>
+                    <option value="">2 years</option>
+                  </select>
+                  <select name="" id="">
+                    <option value="">earl</option>
+                    <option value="">month</option>
+                    <option value="">2 years</option>
+                  </select>
+                </div>
+              </div>
+              <div class="edit-course__row">
+                <label for="">Setting 1</label>
                 <input type="text">
               </div>
               <div class="edit-course__row">
-                <div class="edit-course__form-group edit-course__group--1">
-
-                </div>
-                <div class="edit-course__group edit-course__group--1">
-
-                </div>
-                <div class="edit-course__group edit-course__group--2">
-
-                </div>
-              </div>
-              <div class="edit-course__row">
-                <div class="edit-course__form-group edit-course__group--half">
-                  <label for=""></label>
+                <div class="edit-course__group edit-course__group--half">
+                  <label for="">Setting 2</label>
                   <input type="text">
                 </div>
                 <div class="edit-course__group edit-course__group--half">
-                  <label for=""></label>
+                  <label for="">Setting 3</label>
                   <input type="text">
                 </div>
               </div>
