finished general tab for page edit-course

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -133,15 +133,15 @@
                   <div class="edit-course__label">Course for</div>
                   <div class="checkbox checkbox--white-bg">
                     <input type="checkbox" id="ch1" checked="">
-                    <label for="ch1" class="checkbox__label">ATC</label>
+                    <label for="ch1" class="checkbox__label checkbox__label--dark">ATC</label>
                   </div>
                   <div class="checkbox checkbox--white-bg">
                     <input type="checkbox" id="ch2" checked="">
-                    <label for="ch2" class="checkbox__label">AIM</label>
+                    <label for="ch2" class="checkbox__label checkbox__label--dark">AIM</label>
                   </div>
                   <div class="checkbox checkbox--white-bg">
                     <input type="checkbox" id="ch3">
-                    <label for="ch3" class="checkbox__label">ATSEP</label>
+                    <label for="ch3" class="checkbox__label checkbox__label--dark">ATSEP</label>
                   </div>
                 </div>
                 <div class="edit-course__group edit-course__group--1 center-text">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="edit-course__group edit-course__group--2">
                   <div class="edit-course__label">repeat every</div>
-                  <select name="" id="" clas>
+                  <select name="" id="">
                     <option value="">earl</option>
                     <option value="">month</option>
                     <option value="">2 years</option>
@@ -194,7 +194,41 @@
               </div>
             </div>
             <div class="edit-course__col edit-course__col--2">
-              
+              <div class="edit-course__row">
+                <label for="">Picture</label>
+                <div class="upload-file upload-file--edit" style="background-image: url('img/course-bg-big-2.png');">
+                  <input type="file">
+                  <span class="upload-file__btn">Replace</span>
+                  <button class="btn btn--close"></button>
+                </div>
+              </div>
+              <div class="edit-course__row">
+                <div class="checkbox checkbox--white-bg">
+                  <input type="checkbox" id="ch7">
+                  <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in course</label>
+                </div>
+                <div class="checkbox checkbox--white-bg">
+                  <input type="checkbox" id="ch7">
+                  <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in sections</label>
+                </div>
+              </div>
+              <div class="edit-course__row">
+                <p class="edit-course__add">Course instructor(s) <a href="" class="btn btn--edit-add">add</a></p>
+              </div>
+              <div class="edit-course__row">
+                <div class="edit-course__select-group">
+                  <select name="" id="" class="select select--long">
+                    <option value="">earl</option>
+                    <option value="">month</option>
+                    <option value="">2 years</option>
+                  </select>
+                  <select name="" id="" class="select select--long">
+                    <option value="">earl</option>
+                    <option value="">month</option>
+                    <option value="">2 years</option>
+                  </select>
+                </div>
+              </div>
             </div>
           </div>
         </form>
