--- a/src/profile-edit.html
+++ b/src/profile-edit.html
@@ -58,9 +58,9 @@
           <div class="profile-edit__col profile-edit__col-1">
             <div class="profile-edit__form-row">
               <label for="active">Picture</label>
-              <div class="profile-edit__user-photo" style="background-image: url('img/student-photo.jpg');">
+              <div class="upload-file upload-file--profile" style="background-image: url('img/student-photo.jpg');">
                 <input type="file">
-                <span class="profile-edit__upload-btn btn">Replace</span>
+                <span class="upload-file__btn">Replace</span>
                 <button class="btn btn--close"></button>
               </div>
             </div>
