Хедер почернел, текст не переносится больше

--- a/src/courses.html
+++ b/src/courses.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-  <div class="page-header page-header--courses">
-    <header class="header header--transparent">
-      <div class="container container--small">
+  <div class="page-header page-header--none">
+    <header class="header">
+      <div class="container">
         <div class="row">
-          <div class="col-md-3 col-xs-12">
-            <div class="logo logo--dark">Online <span class="logo__second">Learning System</span></div>
+          <div class="col-md-4 col-xs-12">
+            <div class="logo">Online <span class="logo__second">Learning System</span></div>
           </div>
-          <div class="col-md-9 col-xs-12 header__menu">
-            <nav class="menu menu--dark">
+          <div class="col-md-8 col-xs-12 header__menu">
+            <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
                   <a class="menu__link menu__link--active">Courses</a>
@@ -32,11 +32,11 @@
             </nav>
           </div>
         </div>
-        <button type="button" class="header__toggle header__toggle--dark"><span>Menu toggle</span></button>
+        <button type="button" class="header__toggle"><span>Menu toggle</span></button>
       </div>
     </header>
 
-    <div class="container container--small">
+    <div class="container">
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <div class="container container--small">
+  <div class="container">
     <section class="courses-list">
       <header class="courses-list__header">
         <div class="courses-list__col courses-list__col--8">
@@ -196,7 +196,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
