К черту маленький контейнер

--- a/src/admin-course.html
+++ b/src/admin-course.html
@@ -10,7 +10,7 @@
 <body>
   
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
@@ -44,7 +44,7 @@
     </div>
   </header>
   <div class="page-header page-header--course">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-8">
           <div class="course-base course-base--admin">
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <div class="container container--small">
+  <div class="container">
     <div class="course-info js-tab-container">
       <div class="staff js-tab js-tab--active">
         <div class="row">
@@ -344,7 +344,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
