--- a/src/admin-staff.html
+++ b/src/admin-staff.html
@@ -10,7 +10,7 @@
 <body>
   
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
@@ -45,7 +45,7 @@
   </header>
 
   <div class="page-header page-header--admin">
-    <div class="container container--small">
+    <div class="container">
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -74,7 +74,7 @@
     </div>
   </div>
 
-  <div class="container container--small">
+  <div class="container">
     <div class="staff-main">
       <div class="row">
         <aside class="col-md-3 col-sm-12 col-xs-12 pull-right">
@@ -295,7 +295,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
