--- a/src/message-form.html
+++ b/src/message-form.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
@@ -36,7 +36,7 @@
   </header>
 
   <div class="page-header page-header--message-form">
-    <div class="container container--small">
+    <div class="container">
       <div class="message-form">
         <div class="form-alert">
           <span class="form-alert__text">Message sent</span><a href="#" class="form-alert__btn btn btn--ok">Ок</a>
@@ -69,7 +69,7 @@
 
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
