--- a/src/messages.html
+++ b/src/messages.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
@@ -36,13 +36,13 @@
   </header>
 
   <div class="page-header page-header--with-line">
-    <div class="container container--small">
+    <div class="container">
       <h1 class="page-header__title">Messages</h1>
       <p class="page-header__description status-text status-text--danger">2 unread messages</p>
     </div>
   </div>
 
-  <div class="page container container--small">
+  <div class="page container">
     <div class="row">
       <aside class="col-md-3 col-sm-12 col-xs-12 pull-right">
         <section class="filter">
@@ -220,7 +220,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
