--- a/src/profile-edit.html
+++ b/src/profile-edit.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header header--admin">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
@@ -45,7 +45,7 @@
   </header>
   
   <div class="profile-edit page-body">
-    <div class="container container--small">
+    <div class="container">
       <div class="form-alert">
         <span class="form-alert__text">Changes saved</span><a href="#" class="form-alert__btn btn btn--ok">Ок</a>
       </div>
@@ -151,7 +151,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
