--- a/src/admin-profile.html
+++ b/src/admin-profile.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
@@ -45,7 +45,7 @@
   </header>
 
   <section class="profile-view page-header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-9 col-xs-12">
           <div class="profile-view__image">
@@ -86,7 +86,7 @@
     </div>
   </section>
 
-  <div class="container container--small">
+  <div class="container">
     <section class="courses-list">
       <header class="courses-list__header">
         <div class="courses-list__col courses-list__col--1">
@@ -217,7 +217,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
