--- a/src/instructors.html
+++ b/src/instructors.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <div class="container container--small">
+  <div class="container">
     <div class="row">
 
       <div class="col-md-8">
@@ -102,7 +102,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
