--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,8 @@
       <li><a href="profile-edit.html">Profile edit</a></li>
 
       <li style="list-style: none; margin:15px 0 10px;"><b>EXTRA</b></li>
-      <li><a href="edit-course.html">Course</a></li>
+      <li><a href="edit-course.html">Course page</a></li>
+      <li><a href="edit-forum.html">Forum</a></li>
     </ul>
   </div>
 
