added tab 'section info' for page 'edit section'

--- a/src/edit-forum.html
+++ b/src/edit-forum.html
@@ -101,7 +101,7 @@
       </aside>
 
       <div class="edit-area__editor">
-        <div class="edit-area__editor-head">
+        <div class="edit-area__editor-header">
           <h2 class="edit-area__editor-title h3">Forum</h2>
         </div>
 
