--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
       <li style="list-style: none; margin:15px 0 10px;"><b>EXTRA</b></li>
       <li><a href="edit-course.html">Course page</a></li>
+      <li><a href="edit-section.html">Section</a></li>
       <li><a href="edit-forum.html">Forum</a></li>
     </ul>
   </div>
