--- a/src/edit-section.html
+++ b/src/edit-section.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>OLS - Edit сourse</title>
+  <title>OLS - Edit section</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
@@ -51,7 +51,7 @@
       <aside class="edit-nav">
         <ul class="edit-nav__list">
           <li class="edit-nav__list-item">
-            <a href="" class="edit-nav__link edit-nav__link--active">
+            <a href="" class="edit-nav__link">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.76 14.451"><path d="M12.732 5.57l-.373-.886s.866-1.956.79-2.03L12 1.53c-.078-.077-2.035.816-2.035.816l-.902-.365S8.266 0 8.156 0h-1.62c-.112 0-.85 1.987-.85 1.987l-.9.366s-2-.85-2.075-.773L1.566 2.7c-.08.078.833 1.995.833 1.995l-.373.884S0 6.36 0 6.463v1.588c0 .11 2.03.833 2.03.833l.373.883s-.867 1.955-.79 2.03l1.146 1.123c.077.077 2.034-.816 2.034-.816l.903.366s.797 1.98.907 1.98h1.62c.112 0 .85-1.986.85-1.986l.905-.366s1.993.85 2.07.775l1.147-1.122c.08-.078-.834-1.993-.834-1.993l.372-.884s2.026-.78 2.026-.888V6.4c0-.11-2.028-.83-2.028-.83zM9.747 7.224C9.747 8.5 8.685 9.54 7.38 9.54c-1.302 0-2.365-1.038-2.365-2.315S6.077 4.91 7.38 4.91c1.305.002 2.367 1.04 2.367 2.315z" fill="#546e7a"/></svg>
               Course basic info
             </a>
@@ -72,7 +72,7 @@
         <p class="edit-nav__title">Sections & tests</p>
         <p class="edit-nav__descr">Drag and drop to reorder</p>
         <div class="edit-nav__group">
-          <a class="edit-nav__link edit-nav__link--section">
+          <a class="edit-nav__link edit-nav__link--section edit-nav__link--active">
             <span class="edit-nav__link-text">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z"/></svg>
             Commercial Airliners</span>
@@ -102,16 +102,22 @@
 
       <div class="edit-area__editor">
         <div class="edit-area__editor-header">
-          <h2 class="edit-area__editor-title h3">Course info</h2>
+          <div class="edit-area__editor-head">
+            <h2 class="edit-area__editor-title h3">U.S. Aircraft History <span class="edit-area__label-type">section</span></h2>
+            <a href="#" class="btn btn-action btn-action--delete">Delete course</a>
+          </div>
           <ul class="nav-tabs">
             <li class="nav-tabs__item nav-tabs__item--active">
-              <a href="#" class="link-with-number js-tab-control" data-target="edit-course">General</a>
+              <a href="#" class="link-with-number js-tab-control" data-target="edit-section-info">Section info</a>
             </li>
             <li class="nav-tabs__item">
-              <a href="#" class="link-with-number js-tab-control" data-target="edit-announce">Announcements <span class="link-with-number__value">2</span></a>
+              <a href="#" class="link-with-number js-tab-control" data-target="edit-videos">Videos <span class="link-with-number__value">2</span></a>
+            </li>
+            <li class="nav-tabs__item">
+              <a href="#" class="link-with-number js-tab-control" data-target="edit-files">Files <span class="link-with-number__value">2</span></a>
             </li>
           </ul>
-          <div class="edit-area-alert">Changes saved</div>
+          <a href="#" class="edit-area__btn-head btn btn--submit">Save all changes</a>
         </div>
 
         <div class="edit-area__tabs-container js-tab-container">
@@ -127,105 +133,13 @@
                   <textarea name="" id="" rows="5"></textarea>
                 </div>
                 <div class="edit-course__row">
-                  <div class="edit-course__group edit-course__group--1">
-                    <div class="edit-course__label">Course for</div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch1" checked="">
-                      <label for="ch1" class="checkbox__label checkbox__label--dark">ATC</label>
-                    </div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch2" checked="">
-                      <label for="ch2" class="checkbox__label checkbox__label--dark">AIM</label>
-                    </div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch3">
-                      <label for="ch3" class="checkbox__label checkbox__label--dark">ATSEP</label>
-                    </div>
-                  </div>
-                  <div class="edit-course__group edit-course__group--1 center-text">
-                    <div class="edit-course__label">obligatory</div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch4">
-                      <label for="ch4" class="checkbox__label checkbox__label--single"></label>
-                    </div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch5">
-                      <label for="ch5" class="checkbox__label checkbox__label--single"></label>
-                    </div>
-                    <div class="checkbox checkbox--white-bg">
-                      <input type="checkbox" id="ch6">
-                      <label for="ch5" class="checkbox__label checkbox__label--single"></label>
-                    </div>
-                  </div>
-                  <div class="edit-course__group edit-course__group--2">
-                    <div class="edit-course__label">repeat every</div>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
-                    </select>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
-                    </select>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="edit-course__row">
-                  <label for="">Setting 1</label>
-                  <input type="text">
-                </div>
-                <div class="edit-course__row">
-                  <div class="edit-course__group edit-course__group--half">
-                    <label for="">Setting 2</label>
-                    <input type="text">
-                  </div>
-                  <div class="edit-course__group edit-course__group--half">
-                    <label for="">Setting 3</label>
-                    <input type="text">
-                  </div>
-                </div>
-              </div>
-              <div class="edit-course__col edit-course__col--2">
-                <div class="edit-course__row">
-                  <label for="">Picture</label>
-                  <div class="upload-file upload-file--edit" style="background-image: url('img/course-bg-big-2.png');">
-                    <input type="file">
-                    <span class="upload-file__btn">Replace</span>
-                    <button class="btn btn--close"></button>
-                  </div>
-                </div>
-                <div class="edit-course__row">
                   <div class="checkbox checkbox--white-bg">
-                    <input type="checkbox" id="ch7">
-                    <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in course</label>
-                  </div>
-                  <div class="checkbox checkbox--white-bg">
-                    <input type="checkbox" id="ch7">
-                    <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in sections</label>
-                  </div>
+                      <input type="checkbox" id="ch1" checked>
+                      <label for="ch1" class="checkbox__label checkbox__label--dark">Forum is enabled in section</label>
+                    </div>
                 </div>
                 <div class="edit-course__row">
-                  <p class="edit-course__add">Course instructor(s) <a href="" class="btn btn--edit-add">add</a></p>
-                </div>
-                <div class="edit-course__row">
-                  <div class="edit-course__select-group">
-                    <select name="" id="" class="select select--long">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
-                    </select>
-                    <select name="" id="" class="select select--long">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
-                    </select>
-                  </div>
+                  <button class="edit-course__btn-save btn btn--submit">Save</button>
                 </div>
               </div>
             </form>
