--- a/src/edit-section.html
+++ b/src/edit-section.html
@@ -108,7 +108,7 @@
           </div>
           <ul class="nav-tabs">
             <li class="nav-tabs__item">
-              <a href="#" class="link-with-number js-tab-control" data-target="edit-section-info">Section info</a>
+              <a href="#" class="link-with-number js-tab-control" data-target="edit-course">Section info</a>
             </li>
             <li class="nav-tabs__item nav-tabs__item--active">
               <a href="#" class="link-with-number js-tab-control" data-target="edit-videos">Videos <span class="link-with-number__value">2</span></a>
@@ -117,7 +117,7 @@
               <a href="#" class="link-with-number js-tab-control" data-target="edit-files">Files <span class="link-with-number__value">2</span></a>
             </li>
           </ul>
-          <a href="#" class="edit-area__btn-head btn btn--submit">Save all changes</a>
+          <div class="edit-area-alert">Changes saved</div>
         </div>
 
         <div class="edit-area__tabs-container js-tab-container">
@@ -144,7 +144,8 @@
               </div>
             </form>
           </div>
-          <div class="edit-videos js-tab js-tab--active">
+
+          <div class="edit-videos js-tab">
             <div class="edit-videos__head">2 videos <span class="edit-videos__descr">Drag and drop to reorder</span></div>
             <form action="/echo" method="POST">
               <div class="edit-videos__item">
@@ -163,7 +164,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="edit-videos__item-close">
+                <div class="edit-videos__item-delete">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#FF5722"/></svg>
                 </div>
               </div>
@@ -183,12 +184,28 @@
                     </div>
                   </div>
                 </div>
-                <div class="edit-videos__item-close">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#FF5722"/></svg>
+                <div class="edit-videos__item-delete">
+                  <a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#FF5722"/></svg>
+                  </a>
+                  
                 </div>
               </div>
-              <div class="edit-videos__add">
-                <a href="#" class="btn btn-action"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.128 9.128"><path d="M0 3.317h3.317V0H5.81v3.317h3.32V5.81H5.81v3.32H3.318V5.81H0V3.318z" /></svg> Add section</a>
+              <div class="add-file">
+                <input type="file">
+                <div class="btn btn-action"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.128 9.128"><path d="M0 3.317h3.317V0H5.81v3.317h3.32V5.81H5.81v3.32H3.318V5.81H0V3.318z" /></svg> add video</div>
+              </div>
+              <button class="edit-videos__btn-save btn btn--submit">Save</button>
+            </form>
+          </div>
+
+          <div class="edit-files js-tab js-tab--active">
+            <div class="edit-videos__head">Files <span class="edit-videos__descr">Drag and drop to reorder</span></div>
+            <form action="/echo" method="POST">
+
+              <div class="add-file">
+                <input type="file">
+                <div class="btn btn-action"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.128 9.128"><path d="M0 3.317h3.317V0H5.81v3.317h3.32V5.81H5.81v3.32H3.318V5.81H0V3.318z" /></svg> add video</div>
               </div>
               <button class="edit-videos__btn-save btn btn--submit">Save</button>
             </form>
